<?xml version="1.0" encoding="utf-8"?>




<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


        <variable
            name="viewModel"
            type="com.example.oblig4Meg.model.ArtViewModel" />

        <variable
            name="StartFragment"
            type="com.example.oblig4Meg.StartFragment" />

        <variable
            name="InfoPictureFragment"
            type="com.example.oblig4Meg.InfoPictureFragment" />

        <variable
            name="photo"
            type="com.example.oblig4Meg.network.ArtPhoto" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoPictureFragment">


    <Button
        android:id="@+id/button2"
        android:layout_width="193dp"
        android:layout_height="64dp"
        android:text="Forrige"
        android:onClick="@{() -> InfoPictureFragment.goBackPage()}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="Velg rammetype og bildestørelse"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@{viewModel.artist.name}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@{viewModel.artist.email}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:textColor="@color/black"
        android:textSize="18sp"/>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="270dp"
        android:layout_height="270dp"
        app:imageUrl="@{viewModel.single_photo.url}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/button"
        android:layout_width="193dp"
        android:layout_height="64dp"
        android:onClick="@{() -> InfoPictureFragment.putInBasket(viewModel.single_photo)}"
        android:text="Legg i handlekurv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="205dp"
        android:layout_height="145dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@{viewModel.single_photo.bezel.equals(@string/treramme)}"
            android:onClick="@{() -> viewModel.single_photo.setBezel(@string/treramme)}"
            android:text="@string/treramme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@{viewModel.single_photo.bezel.equals(@string/slvramme)}"
            android:onClick="@{() -> viewModel.single_photo.setBezel(@string/slvramme)}"
            android:text="@string/slvramme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@{viewModel.single_photo.bezel.equals(@string/gullramme)}"
            android:onClick="@{() -> viewModel.single_photo.setBezel(@string/gullramme)}"
            android:text="@string/gullramme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_group2"
        android:layout_width="205dp"
        android:layout_height="145dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radio_button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@{viewModel.single_photo.size.equals(@string/lite)}"
            android:onClick="@{() -> viewModel.setSize(@string/lite)}"
            android:text="@string/lite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/radio_button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@{viewModel.single_photo.size.equals(@string/medium)}"
            android:onClick="@{() -> viewModel.setSize(@string/medium)}"
            android:text="@string/medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/radio_button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@{viewModel.single_photo.size.equals(@string/stor)}"
            android:onClick="@{() -> viewModel.setSize(@string/stor)}"
            android:text="@string/stor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>